# symbolizer

./: .gitignore  README.md  cnn.py  export.py  frontend.py  img_compressor.py  pdf2unicode.py  pyproject.toml  pyvenv.cfg  resnet.py  student_cnn.py  svm.py  test.py
.github/workflows/: frontend.yml  mobile.yml  release.yml  worker.yml
frontend/: .gitignore  next.config.js  package-lock.json  package.json
frontend/components/: CopyableMono.tsx  DownloadProgressLine.tsx  DrawCanvas.tsx  Preview32.tsx  SvgSymbol.tsx  TopNav.tsx
frontend/lib/: i18n.tsx  onnx.ts  useTheme.ts
frontend/pages/: _app.tsx  index.tsx  infer.tsx  submit.tsx  symbols.tsx
frontend/public/: _headers
frontend/public/model/: residualcnn_augument_int8.onnx  residualcnn_int8.onnx
frontend/styles/: global.css
mappings/: label_svg_mapping.json  label_symbol_mapping.json  mappings.json
mobile/: pubspec.yaml
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/assets/: mappings.json
mobile/assets/model/: model_int8.onnx
mobile/lib/: main.dart
mobile/test/: widget_test.dart
py_src/: cnn.py  data_augument.py  img_compressor.py  img_gallery.py  pdf2svg.py  svm.py  test.py  train_test_gen.py
src/: cnn.py  common.py  data_augument.py  densenet.py  export.py  frequency_stat.csv  frontend.py  img_gallery.py  pdf2svg.py  pdf2unicode.py  resnet.py  student_cnn.py  svm.py  test.py  train_test_gen.py
src/latex_recognize/: __init__.py
train/: data_augument.ipynb  symbolizer_train.ipynb
worker/: index.ts  package-lock.json  package.json  schema.sql  wrangler.toml
(+18 files in other folders)
